set(INSTALL_MOZILLA_NMH_DIR "${CMAKE_INSTALL_PREFIX}/${MOZILLA_NMH_DIR}")

add_executable(${PROJECT_NAME}_wrapper ${PROJECT_NAME}_wrapper.cpp)

install(TARGETS ${PROJECT_NAME}_wrapper DESTINATION ${MOZILLA_NMH_DIR})

configure_file("${PROJECT_NAME}.json.in"
  "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.json" @ONLY)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.json
  DESTINATION ${MOZILLA_NMH_DIR})
